# fungt-dialect

./: CMakeLists.txt  README.md  Running-fungt-dialect.txt
fgt_test/: dist.mlir  rain.fgt  rain.mlir  rain.spv  rain_gpu.mlir  rain_spirv.mlir  scalar.mlir
fungt-opt/: CMakeLists.txt  fungt-opt.cpp
fungt-parse/: CMakeLists.txt  fungt-parse.cpp
fungt-plugin/: CMakeLists.txt  fungt-plugin.cpp
fungt-translate/: CMakeLists.txt  fungt-translate.cpp
include/: CMakeLists.txt
include/FunGT/: CMakeLists.txt  FunGTDialect.h  FunGTDialect.td  FunGTIRPArser.cpp  FunGTIRPArser.h  FunGTIRParser.h  FunGTOps.h  FunGTOps.td  FunGTPasses.h  FunGTPasses.td  FunGTTypes.h  FunGTTypes.td
include/FunGT-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/FunGT/: CMakeLists.txt  FunGTDialect.cpp  FunGTIRParser.cpp  FunGTOps.cpp  FunGTPasses.cpp  FunGTTypes.cpp
python/: CMakeLists.txt  StandaloneExtensionNanobind.cpp  StandaloneExtensionPybind11.cpp
python/mlir_standalone/dialects/: StandaloneOps.td
test/: CMakeLists.txt
test/CAPI/: CMakeLists.txt  fungt-capi-test.c
